[FIX] RESPONSIVE and rearranged the box display to make it more visible, added new project IntervenGo

--- a/src/components/ProjectStyles.css
+++ b/src/components/ProjectStyles.css
@@ -60,7 +60,7 @@
 
 .card-content:hover .card-img {
     transform: scale(1.05) rotate(3deg);
-    opacity: 0.3;
+    opacity: 0.2;
     box-shadow: 10px 10px 10px #FF3366,10px -10px 10px #FF3366, -10px 10px 10px #FF3366, -10px -10px 10px #FF3366;
 }
 
